# MCUXpressoProjects

./: .gitmodules  mcuxpresso_mytheme.epf
FreeRTOS_cJson_test/: .cproject  .project  FreeRTOS_cJson_test LinkServer Debug.launch  FreeRTOS_cJson_test.mex  Notes.md
FreeRTOS_cJson_test/Debug/: FreeRTOS_cJson_test.axf  FreeRTOS_cJson_test.map  FreeRTOS_cJson_test_Debug.ld  FreeRTOS_cJson_test_Debug_library.ld  FreeRTOS_cJson_test_Debug_memory.ld  LPC55S28.xml  LPC55S28_part.xml  makefile  sources.mk
FreeRTOS_cJson_test/Debug/board/: board.d  clock_config.d  clock_config.su  peripherals.su  pin_mux.d  sdmmc_config.d  sdmmc_config.su  subdir.mk
FreeRTOS_cJson_test/Debug/cJSON/: cJSON.d  subdir.mk
FreeRTOS_cJson_test/Debug/component/lists/: generic_list.d  subdir.mk
FreeRTOS_cJson_test/Debug/component/osa/: fsl_os_abstraction_free_rtos.d  fsl_os_abstraction_free_rtos.su  subdir.mk
FreeRTOS_cJson_test/Debug/component/serial_manager/: serial_manager.d  serial_port_uart.d  subdir.mk
FreeRTOS_cJson_test/Debug/component/uart/: subdir.mk  usart_adapter.d
FreeRTOS_cJson_test/Debug/device/: subdir.mk  system_LPC55S28.d
FreeRTOS_cJson_test/Debug/drivers/: fsl_clock.d  fsl_common.d  fsl_flexcomm.d  fsl_gpio.d  fsl_i2c.d  fsl_power.d  fsl_reset.d  fsl_sdif.d  fsl_sdif.su  fsl_usart.d  subdir.mk
FreeRTOS_cJson_test/Debug/fatfs/source/: diskio.d  ff.d  ff.su  ffsystem.d  ffunicode.d  subdir.mk
FreeRTOS_cJson_test/Debug/freertos/freertos_kernel/: croutine.d  event_groups.d  event_groups.su  list.d  queue.d  queue.su  stream_buffer.d  stream_buffer.su  subdir.mk  tasks.d  tasks.su  timers.d  timers.su
FreeRTOS_cJson_test/Debug/sdmmc/host/: fsl_sdmmc_host.d  fsl_sdmmc_host.su  subdir.mk
FreeRTOS_cJson_test/Debug/sdmmc/osa/: fsl_sdmmc_osa.d  subdir.mk
FreeRTOS_cJson_test/Debug/sdmmc/src/: fsl_sd.d  fsl_sd.su  fsl_sdmmc_common.d  subdir.mk
FreeRTOS_cJson_test/Debug/source/: FreeRTOS_cJson_test.d  FreeRTOS_cJson_test.su  cJSON.su  inizializations.d  json_handler.d  json_handler.su  subdir.mk
FreeRTOS_cJson_test/Debug/startup/: startup_lpc55s28.su  subdir.mk
FreeRTOS_cJson_test/Debug/utilities/: fsl_assert.d  fsl_debug_console.d  fsl_str.d  fsl_str.su  subdir.mk
FreeRTOS_cJson_test/board/: clock_config.c  peripherals.c  pin_mux.c  pin_mux.h
FreeRTOS_cJson_test/cJSON/: cJSON.c
FreeRTOS_cJson_test/source/: FreeRTOS_cJson_test.c  inizializations.c  json_handler.c
FreeRTOS_cJson_test/startup/: startup_lpc55s28.c
GUI_Guider/Esempi0/: Esempi0.guiguider
GUI_Guider/Esempi0/deploy/sdk/: CMakeLists.txt  build_all.sh  build_flexspi_nor_sdram_debug.sh  build_flexspi_nor_sdram_release.bat  build_flexspi_nor_sdram_release.sh
GUI_Guider/Esempi0/deploy/sdk/board/: dcd.h
GUI_Guider/Esempi0/deploy/sdk/littlevgl/lvgl/src/lv_widgets/: lv_anim_img.c
GUI_Guider/Esempi0/temp/: board.h  conf.json  simulator.h
GUI_Guider/iMXRT_LVGL_MS_Demo/: iMXRT_LVGL_MS_Demo.guiguider
GUI_Guider/iMXRT_LVGL_MS_Demo/deploy/sdk/: build_all.bat  build_flexspi_nor_sdram_debug.bat
GUI_Guider/testy/: testy.guiguider
GUI_Guider/testy/deploy/config/: MIMXRT1052xxxxB.xml  MIMXRT1052xxxxB_part.xml
GUI_Guider/testy/lvgl-simulator/: lv_conf.h
GUI_Guider/testy/temp/: board.h  conf.json
Test_cJSON/: .cproject  .project  Notes.md  Test_cJSON LinkServer Debug.launch  Test_cJSON.mex
Test_cJSON/Debug/: Test_cJSON.axf  Test_cJSON.map  Test_cJSON_Debug.ld  Test_cJSON_Debug_library.ld  Test_cJSON_Debug_memory.ld  makefile
Test_cJSON/Debug/board/: board.d  board.su  clock_config.d  pin_mux.d  pin_mux.su  sdmmc_config.d  subdir.mk
Test_cJSON/Debug/component/lists/: generic_list.d  subdir.mk
Test_cJSON/Debug/device/: subdir.mk  system_LPC55S28.d  system_LPC55S28.su
Test_cJSON/Debug/drivers/: fsl_clock.d  fsl_clock.su  fsl_common.d  fsl_flexcomm.d  fsl_flexcomm.su  fsl_gpio.d  fsl_i2c.d  fsl_i2c.su  fsl_power.d  fsl_reset.d  fsl_sdif.d  fsl_usart.d  subdir.mk
Test_cJSON/Debug/source/: Inizializations.su  Test_cJSON.d  Test_cJSON.su  cJSON.d  inizializations.d  json_handler.d  json_handler.su  sd_handler.d  sd_handler.su  subdir.mk
Test_cJSON/Debug/startup/: startup_lpc55s28.d  subdir.mk
Test_cJSON/Debug/utilities/: fsl_assert.d  fsl_debug_console.d  fsl_str.d  subdir.mk
Test_cJSON/board/: board.h  peripherals.c  pin_mux.c  pin_mux.h  sdmmc_config.c  sdmmc_config.h
Test_cJSON/source/: Test_cJSON.c  inizializations.c  json_handler.c  sd_handler.c
littlevgl_guider_ms_demo/: .cproject  .project  littlevgl_guider_ms_demo LinkServer Debug (1).launch  littlevgl_guider_ms_demo LinkServer Debug.launch
littlevgl_guider_ms_demo/Debug/: GUIGUIDER_littlevgl_guider_nxp_base_example.map  GUIGUIDER_littlevgl_guider_nxp_base_example_Debug.ld  GUIGUIDER_littlevgl_guider_nxp_base_example_Debug_library.ld  GUIGUIDER_littlevgl_guider_nxp_base_example_Debug_memory.ld  MIMXRT1052xxxxB_part.xml  littlevgl_guider_ms_demo.axf  littlevgl_guider_ms_demo.map  makefile  sources.mk
littlevgl_guider_ms_demo/Debug/board/: board.d  board.su  clock_config.d  clock_config.su  littlevgl_support.d  littlevgl_support.su  pin_mux.d  pin_mux.su  subdir.mk
littlevgl_guider_ms_demo/Debug/custom/: custom.d  custom.su  subdir.mk
littlevgl_guider_ms_demo/Debug/device/: subdir.mk  system_MIMXRT1052.d  system_MIMXRT1052.su
littlevgl_guider_ms_demo/Debug/drivers/: fsl_cache.d  fsl_clock.d  fsl_clock.su  fsl_common.d  fsl_elcdif.d  fsl_elcdif.su  fsl_gpio.d  fsl_gpio.su  fsl_lpi2c.d  fsl_lpi2c.su  fsl_lpuart.d  fsl_lpuart.su  fsl_pxp.d  fsl_pxp.su  subdir.mk
littlevgl_guider_ms_demo/Debug/source/: littlevgl_guider.d  littlevgl_guider.su  subdir.mk
littlevgl_guider_ms_demo/Debug/startup/: startup_mimxrt1052.su  subdir.mk
littlevgl_guider_ms_demo/Debug/touchpanel/: fsl_ft5406_rt.d  fsl_ft5406_rt.su  subdir.mk
littlevgl_guider_ms_demo/Debug/utilities/: fsl_assert.d  fsl_debug_console.d  fsl_str.d  subdir.mk
littlevgl_guider_ms_demo/Debug/xip/: evkbimxrt1050_flexspi_nor_config.d  fsl_flexspi_nor_boot.d  subdir.mk
littlevgl_guider_ms_demo/board/: littlevgl_support.c
littlevgl_guider_ms_demo/custom/: custom.c  custom.h
(+225 files in other folders)
